--- a/front/src/app/accueil/accueil.component.html
+++ b/front/src/app/accueil/accueil.component.html
@@ -28,7 +28,7 @@
                 <a class="nav-link active" aria-current="page" href="/inscription">Inscription</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/liste-match">Les Matchs</a>
+                <a class="nav-link active" aria-current="page" href="/tournoi">Les Tournois</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/classement">Classement</a>
