--- a/front/src/app/plan-du-site/plan-du-site.component.html
+++ b/front/src/app/plan-du-site/plan-du-site.component.html
@@ -12,7 +12,7 @@
       <li><a href="/">Accueil</a></li>
       <li><a href="/liste-joueur">Les Joueurs</a></li>
       <li><a href="/inscription">Inscription</a></li>
-      <li><a href="/liste-match">Les Matchs</a></li>
+      <li><a href="/tournoi">Les Tournois</a></li>
       <li><a href="/classement">Classement</a></li>
   </ul>
 </div>
