--- a/front/src/app/donnees-personnelles/donnees-personnelles.component.html
+++ b/front/src/app/donnees-personnelles/donnees-personnelles.component.html
@@ -1,1 +1,35 @@
-<p>donnees-personnelles works!</p>
+<div class="container">
+    <h1>Politique de Confidentialité des Données Personnelles</h1>
+
+    <section>
+        <h2>Traitement des données</h2>
+        <p>Les Maitres de la Raquette s’engage à ce que le traitement des données personnelles effectué sur les-maitres-de-la-raquette.fr soit conforme au RGPD et à la loi Informatique et Libertés.</p>
+    </section>
+
+    <section>
+        <h2>Objet du traitement</h2>
+        <p>Les Maitres de la Raquette est une application de gestion de tournoi de ping-pong  qui implique la collecte de certaines informations personnelles telles que:</p>
+        <ul>
+            <li>L’adresse électronique, nécessaire pour l’envoi de courriels relatifs à l’inscription.</li>
+            <li>Les informations d'identifications : prénom, nom </li>
+            <li>Les coordonnées pour contacter le joueurs : adresse, ville, code postal, pays et le numéro de téléphone.</li>
+            <li>Les informations concernant la pratique sportive du joueur : sa qualité, son classement,... </li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Vos droits sur vos données</h2>
+        <p>Pour toute question ou demande relative à vos données personnelles, veuillez contacter :</p>
+        <div class="contact">Courriel : <a href="mailto:contact@les-maitres-de-la-raquette.fr">contact[arobase]les-maitres-de-la-raquette.fr</a></div>
+        <p>En cas de réponse insatisfaisante, vous avez le droit de contacter le délégué à la protection des données :</p>
+        <div class="address">
+            E-mail: <a href="mailto:dpd@les-maitres-de-la-raquette.fr">dpd[arobase]les-maitres-de-la-raquette.fr</a><br>
+            Adresse: À l’attention du DPD, 56 rue des babales, 75001 Paris
+        </div>
+    </section>
+
+    <section>
+    <h2>À propos des cookies</h2>
+    <p>Notre site n'utilise pas de cookie.</p>
+    </section>
+</div>
