--- a/front/src/app/classement/classement.component.html
+++ b/front/src/app/classement/classement.component.html
@@ -1,1 +1,28 @@
-<p>classement works!</p>
+<div class="container mt-4">
+  <h2 class="mb-4">Classement</h2>
+
+  <div class="row">
+    <div class="col">
+      <div class="table-responsive">
+        <table class="table table-striped table-hover">
+          <thead class="table-dark">
+            <tr>
+              <th scope="col">Position</th>
+              <th scope="col">Nom</th>
+              <th scope="col">Victoires</th>
+            </tr>
+          </thead>
+          <tbody>
+            <ng-container *ngFor="let joueur of classement; let i = index">
+              <tr>
+                <td>{{ i + 1 }}</td>
+                <td><a [routerLink]="'/liste-joueur'">{{ joueur.Nom }}</a></td>
+                <td>{{ joueur.Victoires }}</td>
+              </tr>
+            </ng-container>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
