--- a/front/src/app/contributeurs/contributeurs.component.html
+++ b/front/src/app/contributeurs/contributeurs.component.html
@@ -1,16 +1,19 @@
 <div class="container">
   <br>
+  <!-- Titre de la section -->
   <h1 class="h1-custom texte-couleur-bleu">Contributeurs</h1>
   <br>
+  <!-- Message d'information -->
   <div class="alert alert-primary" role="alert">
     <i class="bi bi-info-circle"></i> Découvrez qui a contribué à notre application et leurs rôles.
   </div>
+  <!-- Conteneur des contributeurs avec leurs informations -->
   <div class="container-gauche en-savoir-plus">
     <div class="grid-x cell">
       <!-- Contributeur : Rabab Boulkriat -->
       <div class="contributeur">
         <h4>Rabab Boulkriat</h4>
-        <p>Rabab a apporté une dimension interactive à notre application grâce à la mise en place d'une fonctionnalité de jeu innovante, permettant à chaque joueur de se mesurer à tous les autres participants du tournoi. Cette fonctionnalité enrichit l'expérience utilisateur en offrant une variété de défis et de rencontres. De plus, elle a conçu un algorithme de classement des joueurs qui tient compte de multiples facteurs, telles que les victoires, les défaites et les scores, pour établir un classement juste et représentatif du niveau de compétence de chaque joueur.</p>
+        <p>Rabab a apporté une dimension interactive à notre application grâce à la mise en place d'une fonctionnalité de jeu innovante, permettant à chaque joueur de se mesurer à tous les autres participants du tournoi. Cette fonctionnalité enrichit l'expérience utilisateur en offrant une variété de défis et de rencontres. De plus, elle a conçu un algorithme de classement des joueurs qui tient compte de multiples facteurs, tels que les victoires, les défaites et les scores, pour établir un classement juste et représentatif du niveau de compétence de chaque joueur.</p>
       </div>
       
       <!-- Contributeur : Elsa Hadjadj -->
@@ -24,7 +27,6 @@
         <h4>Quentin Bouetel</h4>
         <p>Quentin a joué un rôle crucial dans l'optimisation de notre application de tournoi en développant un algorithme sophistiqué de calcul du temps. Cet algorithme prend en compte divers formats de tournoi, garantissant une gestion efficace du temps pour chaque événement. En outre, il a mis en œuvre un système d'équilibrage avancé pour les équipes et les matchs, assurant ainsi une compétition équitable et équilibrée. Cette fonctionnalité est particulièrement importante pour les tournois avec un nombre impair de participants ou des niveaux de compétence variés, où l'équité est une préoccupation majeure.</p>
       </div>
-
     </div>
   </div>
   <br>
