--- a/front/src/app/footer/footer.component.html
+++ b/front/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="footer">
+<footer class="footer relative-footer">
   <div class="container py-4">
     <div class="row">
       <!-- Plan du site -->
@@ -9,10 +9,10 @@
           </a>
       </div>
 
-      <!-- Contribueurs -->
+      <!-- Contributeurs -->
       <div class="col-md-6 col-lg-3">
         <a class="footer-heading-a" href="/contributeurs">
-          <span class="footer-heading">Contribueurs</span>
+          <span class="footer-heading">Contributeurs</span>
         </a>
       </div>
 
@@ -30,7 +30,7 @@
       </div>
     </div>
     <div class="text-center mt-4">
-      <span>© {{ dateDebut }}<span *ngIf="condition">-{{ dateCourante }}</span> Les Maitres de la Raquette. Tous droits réservés.</span>
+      <span>© {{ dateDebut }}<span *ngIf="condition">-{{ dateCourante }}</span> Les Maîtres de la Raquette. Tous droits réservés.</span>
     </div>
   </div>
 </footer>
