--- a/front/src/app/header/header.component.html
+++ b/front/src/app/header/header.component.html
@@ -1,36 +1,36 @@
-  <!-- Section accueil avec image de fond -->
-  <header>
-    <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <!-- Logo and link to the home page -->
-          <a class="navbar-brand" href="/">
-            <img src="/assets/images/logo-92px.jpg" alt="Logo" width="72" height="auto">
-          </a>
-          <!-- Bouton pour afficher le menu sur les appareils mobiles -->
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <!-- Contenu du menu -->
-          <div class="collapse navbar-collapse justify-content-start" id="navbarSupportedContent">
-            <ul class="navbar-nav mb-2 mb-lg-0">
+<!-- Section accueil avec image de fond -->
+<header>
+  <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <!-- Logo et lien vers la page d'accueil -->
+        <a class="navbar-brand" href="/">
+          <img src="/assets/images/logo-92px.jpg" alt="Logo" width="72" height="auto">
+        </a>
+        <!-- Bouton pour afficher le menu sur les appareils mobiles -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Contenu du menu -->
+        <div class="collapse navbar-collapse justify-content-start" id="navbarSupportedContent">
+          <ul class="navbar-nav mb-2 mb-lg-0">
 
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Accueil</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/liste-joueur"> Les Joueurs</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/inscription">Inscription</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/tournoi">Les Tournois</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/classement">Classement</a>
-              </li>
-            </ul>
-          </div>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="">Accueil</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/liste-joueur">Les Joueurs</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/inscription">Inscription</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/tournoi">Les Tournois</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/classement">Classement</a>
+            </li>
+          </ul>
         </div>
+      </div>
   </nav>
 </header>
