--- a/front/src/app/mentions-legales/mentions-legales.component.html
+++ b/front/src/app/mentions-legales/mentions-legales.component.html
@@ -1,1 +1,29 @@
-<p>mentions-legales works!</p>
+<div class="container">
+  <h1>Mentions Légales</h1>
+  <section>
+      <h2>Éditeur</h2>
+      <p>Ce site est édité par <strong>Les Maîtres de la Raquette</strong>, une plateforme dédiée à la communauté des passionnés de ping-pong. Notre objectif est de fournir un espace pour la gestion et la participation à des tournois de ping-pong, en conformité avec le RGPD et la loi Informatique et Libertés.</p>
+    </section>
+    
+    <section>
+      <h2>Conception et gestion du site</h2>
+      <p>La conception et la gestion de ce site sont réalisées par l'équipe interne de développement des Maîtres de la Raquette, en suivant les meilleures pratiques du développement web pour garantir une expérience utilisateur optimale et sécurisée.</p>
+    </section>
+  
+    <section>
+      <h2>Propriété intellectuelle</h2>
+      <p>Les contenus publiés sur Les Maîtres de la Raquette, y compris les textes, les graphiques, les logos et les images, sont protégés par le droit d'auteur. Toute reproduction, distribution ou publication non autorisée de ces contenus, en tout ou en partie, est strictement interdite et susceptible de poursuites judiciaires.</p>
+      <p>Les marques et logos figurant sur le site sont la propriété de Les Maîtres de la Raquette ou de leurs propriétaires respectifs et ne peuvent être utilisés sans permission écrite préalable.</p>
+    </section>
+  
+    <section>
+      <h2>Protection des données personnelles</h2>
+      <p>Les données personnelles collectées sur le site comprennent des informations nécessaires à l'inscription aux tournois telles que l'adresse électronique, les informations d'identification, les coordonnées, et des informations sur la pratique sportive des joueurs. Ces données sont traitées avec le plus grand respect de la confidentialité et de la sécurité.</p>
+      <p>Vous pouvez contacter notre délégué à la protection des données à <a href="mailto:dpd@lesmaitresdelaraquette.fr">dpd[arobase]lesmaitresdelaraquette.fr</a> pour toute question ou demande relative à vos données personnelles.</p>
+    </section>
+  
+    <section>
+      <h2>Cookies</h2>
+      <p>Notre site <strong>n'utilise pas de cookies</strong> persistants ni de cookies tiers. Toutes les sessions sont gérées sans stockage de données personnelles des utilisateurs.</p>
+    </section>
+</div>
