--- a/front/src/app/accueil/accueil.component.css
+++ b/front/src/app/accueil/accueil.component.css
@@ -1,32 +1,31 @@
-/* Menu horizontal */
-.navbar-nav .nav-link { color: #fff; }
-.navbar-nav .nav-link:hover { color: #009688; }
-
-/************************* barre de navigation *************************/
+/* Styles globaux pour la barre de navigation */
 .navbar {
-  background-color: hwb(0 100% 0% / 0.137);
+  background-color: hwb(0 100% 0% / 0.137); /* Couleur de fond semi-transparente */
 }
 
-.navbar-nav .nav-link.active {
-  color: #eee;
+/* Modification de la couleur des liens dans la barre de navigation */
+.navbar-nav .nav-link {
+  color: #fff; /* Couleur blanche pour les liens */
+  color: #009688; /* Couleur d'accentuation au survol */
+  color: #eee; /* Couleur pour l'élément actif */
 }
 .navbar-nav:hover .nav-link.active:hover {
   color: #92B9CD;
-  border-bottom: 1px solid  #92B9CD;
+  border-bottom: 1px solid #92B9CD; /* Soulignement au survol pour l'élément actif */
 }
 
-/* Section accueil */
+/* Style pour la section d'accueil avec image de fond */
 .accueil-image {
   position: relative;
   padding-top: 1rem;
   height: 100vh;
   width: 100%;
-  background-image: linear-gradient(to bottom, rgba(4,9,30,0.7),rgb(41 73 79 / 38%)),
-  url(/assets/images/ping-pong.webp);
+  background: linear-gradient(to bottom, rgba(4,9,30,0.7), rgba(41, 73, 79, 0.38)), url(/assets/images/ping-pong.webp);
   background-position: center;
-  background-size: cover;
+  background-size: cover; /* Image de fond pleine page avec dégradé */
 }
 
+/* Conteneur du contenu central de l'accueil */
 .content {
   width: 80%;
   position: absolute;
@@ -37,30 +36,23 @@
   color: #fff;
 }
 
-.accueil-texte { color: #eee; margin-bottom: 40px; }
-
+/* Styles pour les textes d'accueil */
 .accueil-titre {
-  text-shadow: 2px 2px 4px #000000;
+  text-shadow: 2px 2px 4px #000000; /* Ombre portée pour le titre */
   line-height: 1.2;
-  margin: 20px 0px 20px;
 }
-
 .accueil-description { font-size: 1.1rem; }
+.highlight { color: #a2240e; } /* Couleur de mise en évidence pour certains mots */
 
-.highlight { color: #a2240e; }
-
-/* Gestion des boutons */
+/* Styles pour les boutons */
 .btn-mise-en-oeuvre {
   border-radius: 0.4rem;
   border-color: #2C5367;
   background-color: #2C5367;
   color: #eee;
 }
-
 .btn-mise-en-oeuvre:hover {
   background-color: #92B9CD;
   border-color: #92B9CD;
-  color: #2C5367 ;
+  color: #2C5367;
 }
-
-.bouge { margin-top: 150px; }
