--- a/front/src/app/accueil/accueil.component.html
+++ b/front/src/app/accueil/accueil.component.html
@@ -1,48 +1,29 @@
-
 <body>
-  <!-- Section accueil avec image de fond -->
+  <!-- Section d'accueil avec image de fond et navigation -->
   <header class="accueil-image">
     <div class="container">
+      <!-- Navigation avec logo et menu déroulant -->
       <nav class="navbar navbar-expand-lg bg-transparent">
         <div class="container-fluid">
-          <!-- Logo -->
-          <a class="navbar-brand" href="#">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="fa-basket2-svg">
-              <!-- Icon SVG -->
-            </svg>
-          </a>
-          <!-- Bouton pour afficher le menu sur les appareils mobiles -->
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <!-- Contenu du menu -->
           <div class="collapse navbar-collapse justify-content-start" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Accueil</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/liste-joueur"> Les Joueurs</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/inscription">Inscription</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/tournoi">Les Tournois</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/classement">Classement</a>
-              </li>
+              <li class="nav-item"><a class="nav-link active" href="#">Accueil</a></li>
+              <li class="nav-item"><a class="nav-link" href="/liste-joueur">Les Joueurs</a></li>
+              <li class="nav-item"><a class="nav-link" href="/inscription">Inscription</a></li>
+              <li class="nav-item"><a class="nav-link" href="/tournoi">Les Tournois</a></li>
+              <li class="nav-item"><a class="nav-link" href="/classement">Classement</a></li>
             </ul>
           </div>
         </div>
       </nav>
+      <!-- Titre et description avec un bouton d'inscription -->
       <div class="content">
         <h1 class="accueil-titre">Tournois de Ping-Pong à Montreuil</h1>
         <p class="accueil-description">Préparez vos raquettes, aiguisez vos réflexes, les tournois de ping-pong sont de retour !</p>
-        <div class="text-center">
-          <a href="/inscription" class="btn btn-primary btn-mise-en-oeuvre">Inscrivez-vous dès maintenant</a>
-        </div>
+        <a href="/inscription" class="btn btn-primary btn-mise-en-oeuvre">Inscrivez-vous dès maintenant</a>
       </div>
     </div>
   </header>
