--- a/front/src/app/footer/footer.component.css
+++ b/front/src/app/footer/footer.component.css
@@ -1,12 +1,23 @@
 .footer {
   background-color: #2C5367;
   color: #fff;
-  position: relative;
   bottom: 0;
   left: 0;
   width: 100%;
   margin-top: 0.1rem;
-  
+}
+
+.fixed-footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  /* Autres styles spécifiques pour le pied de page fixe */
+}
+
+.relative-footer {
+  position: relative;
+  width: 100%;
+  /* Autres styles spécifiques pour le pied de page relatif */
 }
 
 .footer-heading{
